<resources>
    <string name="app_name">Blams</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_blams">BlamsActivity</string>
    <string name="title_activity_main">Blam's</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_upload">Upload</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Information for HTTP Connection-->
    <string name="server_address">http://192.168.100.3:8080/blams_git/</string>
    <string name="client_service">blams_android</string>
    <string name="auth_key">01e71cc7e4ae223d54df20b275d198468ed395fc</string>
    <string name="content_type">application/x-www-form-urlencoded</string>

    <string name="api_login">api/Login_api/index</string>
    <string name="api_wisata_read">api/Wisata/read</string>
    <string name="api_wisata_read_by_id">api/Wisata/read_id</string>

    <string name="title_activity_resort_detail">ResortDetail</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
