<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_red_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_red_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/ic_add_box_red_24dp"
        android:title="@string/title_upload" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_red_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_red_24dp"
        android:title="@string/title_profile" />

</menu>
